--- a/CV/css/styles.css
+++ b/CV/css/styles.css
@@ -4,6 +4,7 @@
 .navbar {
   background-color: #EBBBB0;
   /*----Logo----*/
+  /*---Toggler--*/
   /*----Links----*/
 }
 .navbar .navbar-brand {
@@ -11,6 +12,18 @@
   padding-left: 20px;
   font-family: "Nerko One", cursive;
   font-size: 30px;
+}
+.navbar .navbar-toggler {
+  width: 47px;
+  height: 34px;
+  background-color: white;
+}
+.navbar .navbar-toggler .line {
+  width: 100%;
+  float: left;
+  height: 2px;
+  background-color: #EBBBB0;
+  margin-bottom: 5px;
 }
 .navbar .nav-link {
   color: white !important;
@@ -31,6 +44,7 @@
 #contact {
   background-color: #F6E8E5;
   font-family: "Montserrat", sans-serif;
+  padding-bottom: 60px;
 }
 #contact .container {
   width: 500px;
@@ -75,10 +89,10 @@
   color: #EBBBB0;
 }
 #contact .container .contact .modal-content {
-  background-color: #EBBBB0;
+  background-color: white;
 }
 #contact .container .contact .modal-content .modal-title {
-  color: white;
+  color: black;
   font-family: "Nerko One", cursive;
   font-size: 35px;
   text-align: left;
@@ -87,7 +101,8 @@
 }
 #contact .container .contact .modal-content .modal-body {
   text-align: left;
-  color: white;
+  color: black;
+  margin-left: 15px;
 }
 #contact .container .contact .modal-content .modal-footer button {
   background-color: #F6E8E5;
@@ -230,11 +245,13 @@
   background-color: #A8877F;
 }
 .footer p {
-  color: white;
   font-family: "Montserrat", sans-serif;
   margin-left: 25px;
   padding-top: 10px;
   margin-right: 10px;
+}
+.footer a, .footer a:hover {
+  color: white;
 }
 
 /*---------------------------Copyright---------------------*/
@@ -243,7 +260,7 @@
   display: block;
   height: 40px;
 }
-.copyright p {
+.copyright p, .copyright a, .copyright a:hover {
   color: white;
   font-family: "Montserrat", sans-serif;
 }/*# sourceMappingURL=styles.css.map */
